# durak

./: .gitignore  .project  README.md  durak.cabal  durak.hs
src/: AI.hs  GameData.hs  GameEngine.hs  HumanPlayer.hs  Main.hs  MiniMaxGeneric.hs  MiniMaxSearch.hs  durak.hs
test/: Tests.hs
