name:           durak
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         mildbyte

executable durak
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   QuickCheck >=2.7.3 && <2.8
  ghc-options:     -Wall
  hs-source-dirs:  src
  other-modules:   GameEngine

test-suite Test
  type:            exitcode-stdio-1.0
  build-depends:   base >= 4, QuickCheck
  hs-source-dirs:  test src
  main-is:         Tests.hs
  other-modules:   GameEngine
