name:           durak
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         mildbyte

executable durak
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   QuickCheck >=2.7.3 && <2.8,
                   random >=1.0.1 && <1.1,
                   containers >=0.5.0 && <0.6
  ghc-options:     -Wall
  hs-source-dirs:  src
  other-modules:   
                   GameEngine,
                   HumanPlayer

test-suite Test
  type:            exitcode-stdio-1.0
  build-depends:   
                   base >= 4, QuickCheck,
                   containers >=0.5.0 && <0.6
  hs-source-dirs:  test src
  main-is:         Tests.hs
  other-modules:   
                   GameEngine,
                   HumanPlayer
